--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -17,11 +17,35 @@ $opacity: 0.88;
         position: absolute;
         top: 0;
         right: 0;
-        height: 100%;
+        height: 100vh;
         width: 100%;
         background: rgba($primary-color, $opacity);
         z-index: -1;
       }
     }
+  }
+}
+
+// media query mixins
+
+@mixin mediaSm {
+  @media screen and (max-width: 500px) {
+    @content;
+  }
+}
+@mixin mediaMd {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+@mixin mediaLg {
+  @media screen and (min-width: 769px) and (max-width: 1170px) {
+    @content;
+  }
+}
+
+@mixin mediaXl {
+  @media screen and (min-width: 1771px) {
+    @content;
   }
 }
