--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,7 +15,7 @@ body {
   color: white;
   height: 100%;
   margin: 0;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Poppins", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5;
   @include background();
 }
@@ -48,11 +48,18 @@ header {
 main {
   padding: 4rem;
   height: 100%;
+  transform: translateY(-50%);
+  position: absolute;
+  top: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
   &#home {
     overflow: hidden;
-    h1 {
-      margin-top: 20vh;
-    }
+    // h1 {
+    //   margin-top: 20vh;
+    // }
   }
   .icons {
     margin-top: 1rem;
